--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "ckeditor5-custom-build",
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "license": "SEE LICENSE IN LICENSE.md",
   "private": true,
   "main": "./build/ckeditor.js",
   "types": "./build/ckeditor.d.ts",
+  "files": [
+    "build/"
+  ],
   "dependencies": {
     "@ckeditor/ckeditor5-alignment": "40.0.0",
     "@ckeditor/ckeditor5-basic-styles": "40.0.0",
@@ -33,25 +36,25 @@
     "@ckeditor/ckeditor5-typing": "40.0.0",
     "@ckeditor/ckeditor5-ui": "40.0.0",
     "@ckeditor/ckeditor5-watchdog": "40.0.0",
-    "@ckeditor/ckeditor5-word-count": "40.0.0"
+    "@ckeditor/ckeditor5-word-count": "40.0.0",
+    "clean-webpack-plugin": "^4.0.0"
   },
   "devDependencies": {
-    "@ckeditor/ckeditor5-dev-translations": "^32.1.2",
-    "@ckeditor/ckeditor5-dev-utils": "^32.1.2",
-    "@ckeditor/ckeditor5-theme-lark": "^40.0.0",
-    "css-loader": "^5.2.7",
-    "postcss": "^8.4.31",
-    "postcss-loader": "^4.3.0",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "ts-loader": "^9.4.4",
-    "typescript": "^4.9.5",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^4.10.0"
+    "@ckeditor/ckeditor5-dev-utils": "32.1.2",
+    "@ckeditor/ckeditor5-theme-lark": "40.0.0",
+    "css-loader": "5.2.7",
+    "postcss": "8.4.31",
+    "postcss-loader": "4.3.0",
+    "raw-loader": "4.0.2",
+    "style-loader": "2.0.0",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-loader": "9.4.4",
+    "typescript": "4.9.5",
+    "webpack": "5.88.2",
+    "webpack-cli": "4.10.0"
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack",
     "postbuild": "tsc --declaration --declarationDir build --stripInternal --emitDeclarationOnly"
   }
 }
