--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
+// tsconfig.json
+
 {
   "compilerOptions": {
     "types": [],
-    "lib": [
-      "ES2019",
-      "ES2020.String",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2019", "ES2020.String", "DOM", "DOM.Iterable"],
     "noImplicitAny": true,
     "noImplicitOverride": true,
     "strict": true,
@@ -17,7 +14,6 @@
     "moduleResolution": "node",
     "skipLibCheck": true
   },
-  "include": [
-    "./src"
-  ]
+  "include": ["./src"],
+  "exclude": ["node_modules", "build"]
 }
